Edited wiki page ToolsProjectInformation through web user interface.

--- a/wiki/ToolsProjectInformation.wiki
+++ b/wiki/ToolsProjectInformation.wiki
@@ -20,6 +20,8 @@ Liste de l'ensemble des applications, logiciels, librairie utile au projet
 
 -Power AMC
 
+-GanttProject
+
 *Visual Studio :*
 
 -XNA
