--- a/wiki/ToolsProjectInformation.wiki
+++ b/wiki/ToolsProjectInformation.wiki
@@ -20,7 +20,7 @@ Liste de l'ensemble des applications, logiciels, librairie utile au projet
 
 -Power AMC
 
--GanttProject
+-Ganttproject
 
 *Visual Studio :*
 
