--- a/wiki/DocumentProjet.wiki
+++ b/wiki/DocumentProjet.wiki
@@ -15,3 +15,7 @@ https://www.dropbox.com/s/eki55af4y8tu6f0/DiagrammeCasUtilisation_1.pdf
 Diagramme de classe
 
 https://www.dropbox.com/s/r38cmwtc1qfg6dc/DiagrammeClasses_1.pdf
+
+PowerPoint Soutenance
+
+https://dl.dropboxusercontent.com/u/109322628/InstaProjet/Novembre2013-C%23/UML/Pr%C3%A9sentation1.pptx
